--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -6,6 +6,13 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/BattleGround.BattleGround
+GameDefaultMap=/Game/BattleGround.BattleGround
+
+[/Script/Engine.Engine]
+bSmoothFrameRate=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -44,8 +51,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
 
