--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -9,6 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
 GameDefaultMap=/Game/BattleGround.BattleGround
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.Engine]
 bSmoothFrameRate=True
@@ -43,6 +44,7 @@ bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
 bDisableCCD=False
+bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -51,4 +53,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
+PhysXTreeRebuildRate=10
