--- a/BattleTanks/.gitignore
+++ b/BattleTanks/.gitignore
@@ -1,3 +1,12 @@
+BattleTanks/Content/StarterContent/
+BattleTanks/Content/Tank/tank_fbx_Turret.uasset
+BattleTanks/Content/Tank/tank_fbx_Track.uasset
+BattleTanks/Content/Tank/tank_fbx_Body.uasset
+BattleTanks/Content/Tank/tank_fbx_Barrel.uasset
+BattleTanks/Content/UI/old_stamper_Font.uasset
+BattleTanks/Content/UI/old_stamper.uasset
+BattleTanks/Content/UI/ChallengerFiring.uasset
+
 # Visual Studio 2015 user specific files
 .vs/
 
