Tank AI chasing player!

--- a/BattleTanks/Config/DefaultInput.ini
+++ b/BattleTanks/Config/DefaultInput.ini
@@ -48,12 +48,18 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
 +AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
++AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftShoulder,Scale=-0.700000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="Left Track Throttle",Key=NumPadSeven,Scale=1.000000)
-+AxisMappings=(AxisName="Left Track Throttle",Key=NumPadFour,Scale=-0.500000)
++AxisMappings=(AxisName="Left Track Throttle",Key=NumPadFour,Scale=-0.700000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=NumPadNine,Scale=1.000000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=NumPadSix,Scale=-0.500000)
++AxisMappings=(AxisName="FlybyWire Throttle",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="FlybyWire Throttle",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="FlybyWire Throttle",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="FlybyWire Turn",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="FlybyWire Turn",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="FlybyWire Turn",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
