--- a/BattleTanks/.gitignore
+++ b/BattleTanks/.gitignore
@@ -1,4 +1,3 @@
-BattleTanks/Content/StarterContent/
 BattleTanks/Content/Tank/tank_fbx_Turret.uasset
 BattleTanks/Content/Tank/tank_fbx_Track.uasset
 BattleTanks/Content/Tank/tank_fbx_Body.uasset
@@ -6,12 +5,14 @@ BattleTanks/Content/Tank/tank_fbx_Barrel.uasset
 BattleTanks/Content/UI/old_stamper_Font.uasset
 BattleTanks/Content/UI/old_stamper.uasset
 BattleTanks/Content/UI/ChallengerFiring.uasset
+BattleTanks/Content/BattleGround_sharedassets/Textures/
 
 # Visual Studio 2015 user specific files
 .vs/
 
 # Visual Studio 2015 database file
 *.VC.db
+*.VC.opendb
 
 # Compiled Object files
 *.slo
@@ -82,3 +83,4 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
