--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## 
+
 BattleTanks/Content/Tank/tank_fbx_Turret.uasset
 BattleTanks/Content/Tank/tank_fbx_Track.uasset
 BattleTanks/Content/Tank/tank_fbx_Body.uasset
@@ -83,3 +85,7 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+BattleTanks/Binaries/
+BattleTanks/Intermediate/
+BattleTanks/Saved/
